Fixed header overlap of targets

--- a/css/v2.css
+++ b/css/v2.css
@@ -19,7 +19,7 @@ html {
 	max-width: 100vw;
 }
 
-* {
+:target {
 	scroll-margin-top: 7rem;
 }
 
